[project]
name = "3dvis-assignment2-image-matching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pre-commit>=4.5.0",
    "ruff>=0.14.7",
]
